[IB-960] Integrate UI under settings for selecting countries for corresponding search resluts

--- a/Client/Cliqz/Frontend/Resources/de.lproj/Cliqz.strings
+++ b/Client/Cliqz/Frontend/Resources/de.lproj/Cliqz.strings
@@ -253,3 +253,15 @@
 
 /* Hint on Freshtab when there is no topsites */
 "Empty TopSites hint" = "Hier werden deine meist-besuchten Seiten erscheinen";
+
+/* Search Results from */
+"Search Results from" = "Suchergebnisse von";
+
+/* Localized String for specific region */
+"region-DE" = "Deutschland";
+
+/* Localized String for specific region */
+"region-US" = "USA";
+
+/* Localized String for specific region */
+"region-FR" = "Frankreich";
