--- a/Client/Cliqz/Frontend/Resources/en.lproj/Cliqz.strings
+++ b/Client/Cliqz/Frontend/Resources/en.lproj/Cliqz.strings
@@ -254,3 +254,15 @@
 
 /* Hint on Freshtab when there is no topsites */
 "Empty TopSites hint" = "You will see your most visited sites here";
+
+/* Search Results from */
+"Search Results from" = "Search Results from";
+
+/* Localized String for specific region */
+"region-DE" = "Germany";
+
+/* Localized String for specific region */
+"region-US" = "United States";
+
+/* Localized String for specific region */
+"region-FR" = "France";
