Added Settings to disable/enable query suggestions

--- a/Client/Cliqz/Frontend/Resources/de.lproj/Cliqz.strings
+++ b/Client/Cliqz/Frontend/Resources/de.lproj/Cliqz.strings
@@ -269,3 +269,6 @@
 
 /* Localized String for specific region */
 "region-FR" = "Frankreich";
+
+/* Query Suggestion setting */
+"Search Term Suggestions" = "Suchwort-Vorschläge";
