--- a/Client/Cliqz/Frontend/Resources/en.lproj/Cliqz.strings
+++ b/Client/Cliqz/Frontend/Resources/en.lproj/Cliqz.strings
@@ -270,3 +270,6 @@
 
 /* Localized String for specific region */
 "region-FR" = "France";
+
+/* Query Suggestion setting */
+"Search Term Suggestions" = "Search Term Suggestions";
