--- a/Client/Cliqz/Frontend/Resources/fr.lproj/Cliqz.strings
+++ b/Client/Cliqz/Frontend/Resources/fr.lproj/Cliqz.strings
@@ -271,3 +271,6 @@
 
 /* Localized String for specific region */
 "region-FR" = "France";
+
+/* Query Suggestion setting */
+"Search Term Suggestions" = "Suggestions de recherche";
