[IB-991] Settings: Changes in Wording

--- a/Client/Cliqz/Frontend/Resources/de.lproj/Cliqz.strings
+++ b/Client/Cliqz/Frontend/Resources/de.lproj/Cliqz.strings
@@ -259,7 +259,7 @@
 "Empty TopSites hint" = "Hier werden deine meist-besuchten Seiten erscheinen";
 
 /* Search Results from */
-"Search Results from" = "Suchergebnisse von";
+"Search Results from" = "Suchergebnisse für";
 
 /* Localized String for specific region */
 "region-DE" = "Deutschland";
