--- a/Client/Cliqz/Frontend/Resources/en.lproj/Cliqz.strings
+++ b/Client/Cliqz/Frontend/Resources/en.lproj/Cliqz.strings
@@ -260,7 +260,7 @@
 "Empty TopSites hint" = "You will see your most visited sites here";
 
 /* Search Results from */
-"Search Results from" = "Search Results from";
+"Search Results from" = "Search Results for";
 
 /* Localized String for specific region */
 "region-DE" = "Germany";
