--- a/Client/Cliqz/Frontend/Resources/en.lproj/Cliqz.strings
+++ b/Client/Cliqz/Frontend/Resources/en.lproj/Cliqz.strings
@@ -200,7 +200,7 @@
 "When you share your location, you also get results for locations near you (Google Maps)" = "When you share your location, you also get results for locations near you (Google Maps)";
 
 /* Start buttun title for onBorading */
-"Let's start!" = "Let's start!";
+"Let's start!" = "Let's start";
 
 /* Toast message shown when youtube video download started */
 "The video is being downloaded." = "The video is being downloaded.";
