[IB-935] - Same Forget Mode text strings in Mobile as Desktop

--- a/Client/Cliqz/Frontend/Resources/de.lproj/Cliqz.strings
+++ b/Client/Cliqz/Frontend/Resources/de.lproj/Cliqz.strings
@@ -253,7 +253,7 @@
 "Forget Tab" = "Vergessen Tab";
 
 /* Description on Freshtab for forget mode */
-"Forget Tab Description" = "Websites werden nicht in deinem Verlauf gespeichert. Ebenso werden temporäre Dateien und Cookies nicht gespeichert. Downloads und Lesezeichen werden aber gespeichert.\n Dein Internetdienstanbieter oder Arbeitgeber können weiterhin nachvollziehen, welche Seiten du besucht hast.";
+"Forget Tab Description" = "Du surfst im Vergessen-Modus: Webseiten, die du in diesem Modus besuchst, werden nicht in deinem Verlauf auftauchen. Auch werden lokale Daten, Cookies mit eingeschlossen, nicht gespeichert.";
 
 /* Hint on Freshtab when there is no topsites */
 "Empty TopSites hint" = "Hier werden deine meist-besuchten Seiten erscheinen";
