--- a/Client/Cliqz/Frontend/Resources/en.lproj/Cliqz.strings
+++ b/Client/Cliqz/Frontend/Resources/en.lproj/Cliqz.strings
@@ -254,7 +254,7 @@
 "Forget Tab" = "Forget Tab";
 
 /* Description on Freshtab for forget mode */
-"Forget Tab Description" = "Web sites are not saved to your history. Likewise, temporary files and cookies are not saved. \n However, downloads and bookmarks are saved. Your Internet service provider, employer or the sites themselves can still track which pages you visit.";
+"Forget Tab Description" = "You are browsing in Forget Mode: Websites you visit in this mode will not be saved in your history, and local data, including cookies, will not be stored.";
 
 /* Hint on Freshtab when there is no topsites */
 "Empty TopSites hint" = "You will see your most visited sites here";
