[IB-1025] [IB-1035] Handle the case when user click on share location on the a local card while accessing location was denied before

--- a/Client/Cliqz/Frontend/Resources/de.lproj/Cliqz.strings
+++ b/Client/Cliqz/Frontend/Resources/de.lproj/Cliqz.strings
@@ -334,3 +334,11 @@
 /* AdBlocking Information text for landscape mode. */
 "AdBlocking Information" = "AdBlocking-Information";
 
+/* Alert title for turning on location service when clicking share location on local card */
+"Turn on Location Services" = "Ortungsdienste aktivieren";
+
+/* Alert message for turning on location service when clicking share location on local card */
+"To share your location, go to the settings for the CLIQZ app:\n1.Tap Location\n2.Enable 'While Using'" = "Um deinen Standort zu teilen, gehe in die Einstellungen für die CLIQZ-App:\n1. Wähle Standort\n2. Aktiviere 'Beim Verwenden der App'";
+
+/* Not now option for turning on location service */
+"Not Now" = "Nicht Jetzt";
