--- a/Client/LocalizedStrings/de.lproj/InfoPlist.strings
+++ b/Client/LocalizedStrings/de.lproj/InfoPlist.strings
@@ -1,4 +1,4 @@
-"NSLocationWhenInUseUsageDescription" = "Du erhältst bessere Ergebnisse, wenn du CLIQZ Zugriff auf deinen Standort erlaubst.";
+"NSLocationWhenInUseUsageDescription" = "Dein Standort wird verwendet, um bessere Suchergebnisse anzuzeigen.";
 
 "ShortcutItemTitleNewPrivateTab" = "Neuer privater Tab";
 
