--- a/Client/LocalizedStrings/en.lproj/InfoPlist.strings
+++ b/Client/LocalizedStrings/en.lproj/InfoPlist.strings
@@ -1,4 +1,4 @@
-"NSLocationWhenInUseUsageDescription" = "You receive better results when you allow CLIQZ accessing your location.";
+"NSLocationWhenInUseUsageDescription" = "Your location is used to provide better search results.";
 
 "ShortcutItemTitleNewPrivateTab" = "New Private Tab";
 
