--- a/Client/LocalizedStrings/fr.lproj/InfoPlist.strings
+++ b/Client/LocalizedStrings/fr.lproj/InfoPlist.strings
@@ -1,4 +1,4 @@
-"NSLocationWhenInUseUsageDescription" = "Vous obtiendrez de meilleurs résultats en autorisant CLIQZ à accéder à votre localisation.";
+"NSLocationWhenInUseUsageDescription" = "Ta localisation nous permet de te fournir de meilleurs résultats de recherche.";
 
 "ShortcutItemTitleNewPrivateTab" = "Nouvel onglet de navigation privée";
 
