--- a/Client/Cliqz/Frontend/Resources/fr.lproj/Cliqz.strings
+++ b/Client/Cliqz/Frontend/Resources/fr.lproj/Cliqz.strings
@@ -285,7 +285,7 @@
 "Anti-Phishing" = "Anti-Phishing";
 
 /* Learn more label on control center panel. */
-"Learn more" = "Learn more";
+"Learn more" = "En savoir plus";
 
 /* Activate button in control center panel. */
 "Activate" = "Activer";
