[IB-1056] Text strings for Share location on demand

--- a/Client/Cliqz/Frontend/Resources/en.lproj/Cliqz.strings
+++ b/Client/Cliqz/Frontend/Resources/en.lproj/Cliqz.strings
@@ -342,5 +342,8 @@
 /* Alert message for turning on location service when clicking share location on local card */
 "To share your location, go to the settings for the CLIQZ app:\n1.Tap Location\n2.Enable 'While Using'" = "To share your location, go to the settings for the CLIQZ app:\n1.Tap Location\n2. Enable 'While Using'";
 
+/* Alert message for turning on location service when clicking share location on local card */
+"To share your location, go to the settings of your smartphone:\n1.Turn on Location Services\n2.Select the CLIQZ App\n3.Enable 'While Using'" = "To share your location, go to the settings of your smartphone:\n1.Turn on Location Services\n2.Select the CLIQZ App\n3.Enable 'While Using'";
+
 /* Not now option for turning on location service */
 "Not Now" = "Not Now";
