[IB-1076] merh erfahren to Mehr erfahren

--- a/Client/Cliqz/Frontend/Resources/de.lproj/Cliqz.strings
+++ b/Client/Cliqz/Frontend/Resources/de.lproj/Cliqz.strings
@@ -283,7 +283,7 @@
 "Anti-Phishing" = "Anti-Phishing";
 
 /* Learn more label on control center panel. */
-"Learn more" = "mehr erfahren";
+"Learn more" = "Mehr erfahren";
 
 /* Activate button in control center panel. */
 "Activate" = "Aktivieren";
