--- a/Client/LocalizedStrings/en.lproj/Localizable.strings
+++ b/Client/LocalizedStrings/en.lproj/Localizable.strings
@@ -234,7 +234,7 @@
 "Logins" = "Logins";
 
 /* Restore Tabs Prompt Description */
-"Looks like Firefox crashed previously. Would you like to restore your tabs?" = "Looks like Firefox crashed previously. Would you like to restore your tabs?";
+"Looks like Cliqz crashed previously. Would you like to restore your tabs?" = "Looks like Cliqz crashed previously. Would you like to restore your tabs?";
 
 /* Name for Mark as read button in reader mode
    Title for the button that marks a reading list item as read */
