--- a/Client/LocalizedStrings/fr.lproj/Localizable.strings
+++ b/Client/LocalizedStrings/fr.lproj/Localizable.strings
@@ -234,7 +234,7 @@
 "Logins" = "Paramètres de connexion";
 
 /* Restore Tabs Prompt Description */
-"Looks like Firefox crashed previously. Would you like to restore your tabs?" = "Firefox a cessé de fonctionner. Voulez-vous restaurer vos onglets ?";
+"Looks like Cliqz crashed previously. Would you like to restore your tabs?" = "Cliqz a cessé de fonctionner. Voulez-vous restaurer vos onglets ?";
 
 /* Name for Mark as read button in reader mode
    Title for the button that marks a reading list item as read */
