[IB-1137] [IB-1138]  Modified localized strings for share location

--- a/Client/Cliqz/Frontend/Resources/de.lproj/Cliqz.strings
+++ b/Client/Cliqz/Frontend/Resources/de.lproj/Cliqz.strings
@@ -338,10 +338,10 @@
 "Turn on Location Services" = "Ortungsdienste aktivieren";
 
 /* Alert message for turning on location service when clicking share location on local card */
-"To share your location, go to the settings for the CLIQZ app:\n1.Tap Location\n2.Enable 'While Using'" = "Um deinen Standort zu teilen, gehe in die Einstellungen für die CLIQZ-App:\n1. Wähle Standort\n2. Aktiviere 'Beim Verwenden der App'";
+"To share your location, go to the settings for the CLIQZ app:\n1.Tap Location\n2.Enable 'While Using'" = "Um deinen Standort zu teilen, gehe in die Einstellungen für die CLIQZ-App:\n\n1. Wähle Standort\n2. Aktiviere 'Beim Verwenden der App'";
 
 /* Alert message for turning on location service when clicking share location on local card */
-"To share your location, go to the settings of your smartphone:\n1.Turn on Location Services\n2.Select the CLIQZ App\n3.Enable 'While Using'" = "Um deinen Standort zu teilen, gehe in die Einstellungen deines Smartphones:\n1.Aktiviere Ortungsdienste\n2.Wähle die CLIQZ App\n3.Aktiviere 'Beim Verwenden der App'";
+"To share your location, go to the settings of your smartphone:\n1.Turn on Location Services\n2.Select the CLIQZ App\n3.Enable 'While Using'" = "Um deinen Standort zu teilen, gehe in die Einstellungen deines Smartphones:\n\n1. Aktiviere Ortungsdienste\n2. Wähle die CLIQZ App\n3. Aktiviere 'Beim Verwenden der App'";
 
 /* Not now option for turning on location service */
 "Not Now" = "Nicht Jetzt";
