[IB-1117] Facebook video crash solved

--- a/Client/LocalizedStrings/de.lproj/InfoPlist.strings
+++ b/Client/LocalizedStrings/de.lproj/InfoPlist.strings
@@ -5,3 +5,6 @@
 "ShortcutItemTitleNewTab" = "Neuer Tab";
 
 "NSPhotoLibraryUsageDescription" = "CLIQZ wird diesen Zugriff nur nutzen um Videos auf dein Gerät herunterzuladen.";
+
+"NSMicrophoneUsageDescription" = "CLIQZ greif nur auf dein Mikrofon zu, wenn du Videos innerhalb des Browsers aufnimmst.";
+
