--- a/Client/LocalizedStrings/fr.lproj/InfoPlist.strings
+++ b/Client/LocalizedStrings/fr.lproj/InfoPlist.strings
@@ -5,3 +5,5 @@
 "ShortcutItemTitleNewTab" = "Nouvel onglet";
 
 "NSPhotoLibraryUsageDescription" = "CLIQZ n'utilisera cet accès qu'afin de télécharger des vidéos sur votre appareil.";
+
+"NSMicrophoneUsageDescription" = "CLIQZ utilisera le microphone seulement si vous décidez d’enregistrer des vidéos à l’intérieur du navigateur.";
