--- a/Client/Cliqz/Frontend/Resources/de.lproj/Cliqz.strings
+++ b/Client/Cliqz/Frontend/Resources/de.lproj/Cliqz.strings
@@ -174,6 +174,12 @@
 /* Antitracking UI title for tracked count column */
 "Trackers count title" = "Persönliche Daten";
 
+/* AdBlocking UI title for companies column */
+"Companies" = "Firmen";
+
+/* AdBlocking UI title for tracked count column */
+"Ads" = "Werbungen";
+
 /* Antiphishing alert title */
 "Warning: deceptive website!" =  "Warnung: betrügerische Website!";
 
