--- a/Client/Cliqz/Frontend/Resources/fr.lproj/Cliqz.strings
+++ b/Client/Cliqz/Frontend/Resources/fr.lproj/Cliqz.strings
@@ -176,6 +176,12 @@
 /* Antitracking UI title for tracked count column */
 "Trackers count title" = "Données personnelles";
 
+/* AdBlocking UI title for companies column */
+"Companies" = "Compagnies";
+
+/* AdBlocking UI title for tracked count column */
+"Ads" = "Pubs";
+
 /* Antiphishing alert title */
 "Warning: deceptive website!" =  "Attention : site malveillant !";
 
