--- a/Client/Cliqz/Frontend/Resources/fr.lproj/Cliqz.strings
+++ b/Client/Cliqz/Frontend/Resources/fr.lproj/Cliqz.strings
@@ -23,16 +23,6 @@
 /* Show Cliqz legal page. See https://cliqz.com/legal" */
 "Imprint" = "Légal";
 
-/* Menu item in settings used to open FAQs & Support cliqz url where people can submit feedback */
-"FAQs & Support" = "FAQ & Support";
-
-/* Menu item in settings used to redirect to Report Page where people can report pages */
-
-"Report Website" = "Signaler le site Web";
-
-/* Open search section of settings */
-"Search" = "Rechercher avec";
-
 /* Footnote message for feedback */
 "Feedback to Cliqz Browser (Version %@) for iOS (Version %@) from %@" = "Feedback pour le navigateur Cliqz (Version %@) pour iOS (Version %@) de %@";
 
@@ -51,44 +41,11 @@
 /* Title for `Last site` home shortcut. */
 "Last site" =  "Récemment visités";
 
-/* Block explicit content setting. */
-"Block Explicit Content" = "Bloquer les contenus pornographiques";
-
 /* Share footer */
 "Shared with CLIQZ for iOS" = "Partagé avec CLIQZ pour iOS";
 
-/* URL for detailed info for human web */
-"Human Web URL" = "https://cliqz.com/fr/whycliqz/human-web";
-
-/* Title for Human Web deteiled info on settings */
-"What is Human Web?" = "Qu'est-ce que « Human Web » ?";
-
-/* Navigation title in settings */
-"Human Web" = "Human Web";
-
-/* Block Ads setting
- Block Ads toogle title in Block Ads settings */
-"Block Ads" = "Bloqueur de Pubs BETA";
-
-/* Fair Blocking toogle title in Block Ads settings
-  Title of navigation controller of Fair Blocking */
-"Fair Blocking" = "Bloquage équitable";
-
-/* More details about Fair Blocking */
-"What is 'fair'?" = "Qu'est-ce que « équitable »?";
-
-/* Settings item for clearing private data on termination */
-"Clear Private data on termination" = "Supprimer les données privées à la fermeture";
-
 /* Enable News Push Notifications */
-"Enable News Push Notifications" = "Notifications
- pour l'actualité";
-
-/* Show blocked top-sites from settings */
-"Show blocked topsites" = "Restaurer les sites les plus visités";
-
-/* Text of the 'Show blocked top-sites' alert */
-"All blocked topsites will be shown on the start page again." = "Les sites les plus visités seront affichés sur la page d'accueil.";
+"Enable News Push Notifications" = "Notifications pour l'actualité";
 
 /* OK button in the 'Show blocked top-sites' alert */
 /* Button label to `OK` in news notification permission screen */
@@ -242,12 +199,6 @@
 /* Cliqz search hint description */
 "Relevant results are shown instantly during search." = "Les résultats pertinents sont affichés pendant la recherche.";
 
-/* Detailed description on Adblocking settings */
-"AdBlocking settings clarification" = "À noter : le navigateur Cliqz doit d'abord télécharger certains composants afin de mettre en marche le bloqueur de pubs. Pour cela, tu dois être connecté(e) au Wi-Fi.";
-
-/* [Settings] Show tips and tricks page */
-"Get the best out of CLIQZ" = "Obtenir le meilleur de CLIQZ";
-
 /* Youtube downloader action sheet title */
 "Video quality" = "Qualité vidéo";
 
@@ -271,21 +222,6 @@
 
 /* Hint on Freshtab when there is no topsites */
 "Empty TopSites hint" = "Tu accéderas à tes sites les plus visités ici";
-
-/* Search Results from */
-"Search Results from" = "Résultats pour";
-
-/* Localized String for specific region */
-"region-DE" = "Allemagne";
-
-/* Localized String for specific region */
-"region-US" = "États-Unis";
-
-/* Localized String for specific region */
-"region-FR" = "France";
-
-/* Query Suggestion setting */
-"Search Term Suggestions" = "Suggestions de recherche";
 
 /* Anti-Trakcing panel name on control center. */
 "Anti-Tracking" = "Anti-Tracking";
@@ -359,3 +295,96 @@
 
 /* Not now option for turning on location service */
 "Not Now" = "Pas maintenant";
+
+/** Settings **/
+
+/* [Settings] Search section title */
+"Search" = "Recherche";
+
+/* [Settings] Search Results for */
+"Search Results for" = "Résultats pour";
+
+/* Localized String for specific region */
+"region-DE" = "Allemagne";
+
+/* Localized String for specific region */
+"region-US" = "États-Unis";
+
+/* Localized String for specific region */
+"region-FR" = "France";
+
+/* [Settings] Search Query Suggestions */
+"Search Query Suggestions" = "Suggestions de recherche";
+
+/* [Settings] Block explicit content */
+"Block Explicit Content" = "Bloquer le contenu explicit";
+
+/* [Settings] On status */
+"On" = "Activé";
+
+/* [Settings] Off status */
+"Off" = "Désactivé";
+
+/* [Settings] Human Web */
+"Human Web" = "Human Web";
+
+/* [Settings -> Human Web]Footer text for Fair Blocking section" */
+"Human Web footer" = "CLIQZ travaille avec des données anonymisées sur les recherches et les visites aux sites web. Nous appelons la technologie qui collecte ces données pour construire l'index `Human Web`.";
+
+/* [Settings] Complementary Search */
+"Complementary Search" = "Recherche Complémentaire";
+
+/* [Settings] Browsing & History section header */
+"Browsing & History" = "Navigation & Historique";
+
+/* [Settings] Block pop-up windows*/
+"Block Pop-up Windows" = "Bloquer les pop-ups";
+
+/* [Setting] Block Ads
+ [Settings -> Block Ads] Block Ads */
+"Block Ads" = "Bloqueur de Pubs (Bêta)";
+
+/* [Settings -> Block Ads] Fair Mode */
+"Fair Mode" = "Équitable";
+
+/* [Settings -> Block Ads] Block Ads footer */
+"Block Ads footer" = "Le navigateur Cliqz doit d'abord télécharger certains composants afin de mettre en marche le Bloqueur de Pubs. Pour cela, vous devez être connecté·e· au Wi-Fi.";
+
+/* [Settings -> Block Ads] Fair Blocking footer */
+"Fair Mode footer" = "Un bloquage `équitable` qui affiche des pubs seulement dans certains cas sera ajouté bientôt.";
+
+/* [Settings -> Clear Private Data] Clear Private Data footer */
+"Clear Private Data footer" = "Seulement les données ci-selectionnées seront effacées.";
+
+/* [Settings] Restore Most Visited Websites */
+"Restore Most Visited Websites" = "Restaurer les sites les plus visités";
+
+/* [Settings] Text of the 'Restore Most Visited Websites' alert */
+"All most visited websites will be shown again on the startpage." = "Tous les sites les plus visités seront affichés sur la page d'accueil.";
+
+/* [Settings] Help section header */
+"Help" = "Aide";
+
+/* [Settings] FAQs & Support */
+"FAQ & Support" = "FAQ & Support";
+
+/* [Settings] Get the best out of CLIQZ */
+"Get the best out of CLIQZ" = "Obtenir le meilleur de CLIQZ";
+
+/* [Settings] Report Website */
+"Report Website" = "Signaler le site web";
+
+/* [Settings] About Cliqz section header */
+"About Cliqz" = "À propos de Cliqz";
+
+/* [Settings] Rate Us */
+"Rate Us" = "Noter Cliqz";
+
+/* [Settings] About */
+"About" = "À propos de nous";
+
+/* [Settings -> About] Privacy Policy */
+"Privacy Policy" = "Politique de confidentialité";
+
+/* [Settings -> About] Licenses */
+"Licenses" = "Licenses";
